methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
             ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                       ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                                           ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                                                            ^PictureMono1:2: error: not found: value reculer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                                                                                ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                                                                                                   ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                                                                                                                       ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                                                                                                                                 ^