methods.picture.PictureMono1.scala.code
override def run() {def marquer(){baisseBrosse();leveBrosse()}
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
for(x<-1 to 4){faireV();gauche()}
}
